Fix toggling in the badge designer on IE11

--- a/indico/htdocs/sass/modules/_designer.scss
+++ b/indico/htdocs/sass/modules/_designer.scss
@@ -108,24 +108,31 @@
             width: 100%;
             height: 100%;
             position: absolute;
-            transform-style: preserve-3d;
-            transition: transform 1s;
 
             .template-side {
                 margin: 0;
                 position: absolute;
                 width: 100%;
                 height: 100%;
-                backface-visibility: hidden;
+                transition: transform 1s;
                 transform-style: preserve-3d;
+                -ms-transform-style: none;
+                backface-visibility: hidden;
+                -ms-backface-visibility: hidden;
 
                 &.back {
-                    transform: rotateY(180deg);
+                    transform: rotateY(-180deg);
                 }
             }
 
             &.flipped {
-                transform: rotateY(180deg);
+                .front {
+                    transform: rotateY(180deg);
+                }
+
+                .back {
+                    transform: rotateY(0deg);
+                }
             }
         }
     }
